# SpinDefectSim

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  sitemap.xml
SpinDefectSim/: README.md  __init__.py  quick_start.ipynb
SpinDefectSim/analysis/: __init__.py  ensemble.py  sweep.py
SpinDefectSim/base/: __init__.py  mixins.py  params.py
SpinDefectSim/coulomb/: __init__.py  kernels.py
SpinDefectSim/electrometry/: __init__.py  efield.py  electrometry.py
SpinDefectSim/magnetometry/: __init__.py  bfield.py  geometry.py  magnetometry.py
SpinDefectSim/sensing/: __init__.py  protocols.py  sequences.py  snr.py
SpinDefectSim/spin/: __init__.py  defects.py  echo.py  hamiltonian.py  matrices.py  nuclear.py  rates.py  spectra.py
api/: index.html
api/base/: index.html
api/coulomb/: index.html
api/electrometry/: index.html
api/ensemble/: index.html
api/magnetometry/: index.html
api/sensing/: index.html
api/spin/: index.html
docs/: theory.md
installation/: index.html
quickstart/: index.html
search/: search_index.json
theory/: index.html
